--- a/src/styles/kofta/QuestionSender.css
+++ b/src/styles/kofta/QuestionSender.css
@@ -1,12 +1,14 @@
 .asker {
   display: flex;
-  margin-top: 30px;
   flex-direction: column;
   background-color: #202124;
   border: 1px solid #595959;
   border-radius: 15px;
   box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
-  width: 90%;
+  width: 56vw;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  margin-top: 20px;
 }
 
 .asker__top {
@@ -53,6 +55,8 @@
 
 .asker__input {
   flex: 1;
+  color: #323d4d;
+  font-size: 20px;
 }
 
 .asker__bottom {
