--- a/src/styles/kofta/QuestionSender.css
+++ b/src/styles/kofta/QuestionSender.css
@@ -2,9 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: #202124;
-  border: 1px solid #333;
   border-radius: 15px;
-  box-shadow: 0px 7px 7px -7px rgba(253, 253, 253, 0.308);
   width: 56vw;
   margin: 0 auto;
   margin-bottom: 15px;
@@ -45,8 +43,8 @@
   border: 1px solid #595959;
   padding: 5px 20px;
   margin: 0 10px;
-  border-radius: 11px;
-  background-color: #202124;
+  border-radius: 20px;
+  background-color: #20212400;
 }
 
 .asker__top > form > button {
