--- a/src/styles/kousa/Channels.css
+++ b/src/styles/kousa/Channels.css
@@ -1,14 +1,9 @@
 .channel__wrapper {
   grid-column: 2;
   grid-row: 1 / 4;
-  background: linear-gradient(
-    353.9deg,
-    #424242 -35.54%,
-    rgba(66, 66, 66, 0) 99.04%
-  );
+  background: linear-gradient(353.9deg, #424242 -35.54%, rgba(66, 66, 66, 0) 99.04%);
   color: #958993;
 }
-
 
 .team_name_header {
   color: #b2bdcd;
@@ -48,8 +43,8 @@
   color: #b2bdcd;
 }
 
-.greeen {
-  color: #38978d;
+.green {
+  color: #38978d !important;
 }
 
 .push_left {
