--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,7 +3,7 @@
   margin-top: 20px;
   position: sticky;
   z-index: 100;
-  background-color: #333;
+  background-color: #161b22;
   border-radius: 11px;
   width: 100%;
   height: 60px;
@@ -12,7 +12,7 @@
   margin-bottom: 23px;
 }
 
-.logo {
+.logo__header {
   margin-top: 5px;
   margin-left: 4px;
 }
