--- a/src/styles/kofta/Post.css
+++ b/src/styles/kofta/Post.css
@@ -1,8 +1,9 @@
 .post {
   width: 56vw;
   margin-top: 15px;
+  border: 1px solid #30363d;
   border-radius: 20px;
-  background-color: #202124 !important;
+  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
 }
 
 .post__top {
