--- a/src/styles/kousa/SendMessage.css
+++ b/src/styles/kousa/SendMessage.css
@@ -13,7 +13,7 @@
   width: 53vw;
   margin: 0 auto;
   margin-bottom: 15px;
-  background-color: #202124;
+  background-color: #161b22;
 }
 
 .message__input > input {
@@ -23,7 +23,7 @@
   border: none;
   color: #323d4d;
   font-size: 16px;
-  background-color: #202124;
+  background-color: #161b22;
 }
 
 ::placeholder {
