--- a/src/styles/kousa/Teams.css
+++ b/src/styles/kousa/Teams.css
@@ -1,8 +1,7 @@
 .team__wrapper {
   grid-column: 1;
   grid-row: 1 / 4;
-  border: 2px solid #161b22;
-  background-color: #202124;
+  background-color: #161b22;
   color: #fff;
   border-radius: 5px;
 }
@@ -17,7 +16,7 @@
 .team__list__item {
   height: 50px;
   width: 50px;
-  background-color: #121212;
+  background-color: #0d1117;
   color: #fff;
   margin-top: 20px;
   margin: auto;
