--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -60,6 +60,15 @@
   background: linear-gradient(253.65deg, var(--bg-color) 2.65%, rgba(66, 66, 66, 0) 99.37%);
 }
 
+.list {
+  color: rgb(197, 85, 85);
+  list-style: square;
+}
+
+.header {
+  color: rgb(197, 85, 85);
+}
+
 .card > .card-content > h2 {
   margin-left: 115px;
   color: #fff;
