--- a/src/styles/kousa/AddChannelModal.css
+++ b/src/styles/kousa/AddChannelModal.css
@@ -1,5 +1,5 @@
 .card__addChannel {
-  height: 390px;
+  height: 240px;
   padding: 10px 20px;
   border-radius: 12px;
   width: 500px;
@@ -13,7 +13,7 @@
 
 .card__addChannel {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: 60px 100px 100px;
 }
 
 .cardHeader__addChannel {
