--- a/src/styles/kousa/CreateTeam.css
+++ b/src/styles/kousa/CreateTeam.css
@@ -18,16 +18,16 @@ p {
 }
 
 .team__input {
-  border: 1px solid #323d4d;
   display: flex;
   height: 30px;
+  width: 55%;
   padding: 10px 20px;
-  border-radius: 15px;
-  width: 53vw;
+  border-radius: 30px;
+  border: 1px solid var(--border-color);
   margin: 0 auto;
   margin-bottom: 15px;
   margin-top: 20px;
-  background-color: #161b22;
+  background-color: transparent;
 }
 
 .team__input > input {
@@ -37,7 +37,7 @@ p {
   border: none;
   color: #323d4d;
   font-size: 20px;
-  background-color: #161b22;
+  background-color: transparent;
 }
 
 ::placeholder {
@@ -47,6 +47,7 @@ p {
 
 .team__input > input:focus {
   outline-width: 0;
+  background: transparent !important;
 }
 
 .button {
@@ -62,6 +63,7 @@ p {
 }
 
 .button > button {
+  cursor: pointer;
   outline: none;
   color: #fff;
   flex: 1;
