--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,24 @@ body {
   background-color: #0d1117;
 }
 
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent !important;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #161b22;
+  border-radius: 20px;
+  border: 1px solid #30363d;
+}
+
 .viewteam_layout {
   display: grid;
   height: 86vh;
+  width: 99vw;
   position: fixed;
   grid-template-columns: 100px 250px 1fr;
   grid-template-rows: auto 1fr auto;
@@ -18,6 +33,7 @@ body {
   grid-column: 3;
   grid-row: 1;
   text-align: center;
+  border-bottom: 1px solid #30363d;
 }
 
 .titlebar__header > h2 {
