--- a/src/styles/kousa/MessageContainer.css
+++ b/src/styles/kousa/MessageContainer.css
@@ -4,10 +4,8 @@
   padding-left: 20px;
   padding-right: 20px;
   display: flex;
-  position: relative;
   flex-direction: column-reverse;
   overflow-y: auto;
-  z-index: 2;
 }
 
 .name {
@@ -20,26 +18,6 @@ p {
 
 div {
   margin: 0;
-}
-
-.bubble1,
-.bubble2 {
-  background: white;
-  background: linear-gradient(140.73deg, rgba(66, 66, 66, 0.19) 12.91%, rgba(92, 103, 100, 0) 75.21%);
-  height: 15rem;
-  width: 15rem;
-  position: absolute;
-  border-radius: 50%;
-}
-
-.bubble1 {
-  top: 5%;
-  right: -20%;
-}
-
-.bubble2 {
-  bottom: 5%;
-  left: 130%;
 }
 
 .message {
@@ -61,6 +39,7 @@ div {
 .message_timestamp {
   color: #5d7290;
   margin-left: 20px;
+  font-size: 18px;
 }
 
 .message__info > h4 {
