--- a/src/styles/kousa/AddChannelModal.css
+++ b/src/styles/kousa/AddChannelModal.css
@@ -59,6 +59,21 @@
   background: transparent !important;
 }
 
+.input__DMModal {
+  flex: 1;
+  padding: 10px 20px;
+  margin-bottom: 5px;
+  border: none;
+  color: #323d4d;
+  font-size: 20px;
+  background-color: transparent;
+}
+
+.input__DMModal:focus {
+  outline-width: 0;
+  background: transparent !important;
+}
+
 .btn__addChannel {
   display: flex;
   height: 40px;
