--- a/src/styles/kousa/Channels.css
+++ b/src/styles/kousa/Channels.css
@@ -28,6 +28,10 @@
   color: #5d7290;
 }
 
+.sidebar_list_item > a {
+  color: #5d7290;
+}
+
 .invite-link {
   padding-left: 10px;
   font-size: 20px;
