--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -102,7 +102,7 @@
   margin: 0 auto;
   margin-bottom: 15px;
   margin-top: 20px;
-  background-color: transparent;
+  background-color: transparent !important;
 }
 
 .el__input_login > input {
@@ -110,7 +110,7 @@
   padding: 10px 20px;
   margin-top: 3px;
   border: none;
-  color: #323d4d;
+  color: #323d4d !important;
   font-size: 20px;
   background-color: transparent;
 }
