--- a/src/styles/kousa/InvitePeopleModal.css
+++ b/src/styles/kousa/InvitePeopleModal.css
@@ -80,3 +80,53 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
+
+.input__DMModel {
+  display: flex;
+  height: 37px;
+  width: var(--input-size);
+  padding: 10px 20px;
+  border-radius: 11px;
+  border: 1px solid var(--border-color);
+  margin: 0 auto;
+  margin-bottom: 15px;
+  margin-top: 20px;
+  background-color: transparent;
+}
+
+.input__dm {
+  width: var(--input-size);
+  margin-bottom: 20px;
+}
+
+.input__dm > input {
+  height: 20px;
+}
+
+.card__DM {
+  height: 200px;
+  padding: 10px 20px;
+  border-radius: 12px;
+  width: 500px;
+  outline: none;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  margin-top: 100px;
+  background-color: #161b22;
+  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
+
+.card__DM {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.cardHeader__DM {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.cardHeader__DM > h1 {
+  color: lightgray;
+}
