--- a/src/styles/kousa/AddChannelModal.css
+++ b/src/styles/kousa/AddChannelModal.css
@@ -1,5 +1,5 @@
 .card__addChannel {
-  height: 240px;
+  height: 280px;
   padding: 10px 20px;
   border-radius: 12px;
   width: 500px;
@@ -91,42 +91,53 @@
   font-size: 15px;
 }
 
+.checkbox-AddChannel {
+  display: grid;
+  grid-template-columns: 65px 90px;
+}
+
+.checkbox-AddChannel > label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: lightgray;
+  font-size: 20px;
+}
+
 .buttons__AddChannel {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
 
-.checkbox-AddChannel {
-  margin-left: 10px;
-  display: grid;
-  grid-template-columns: 5px 60px 50px;
+input[type='checkbox'] {
+  margin-top: 8px;
+  position: relative;
+  width: 60px;
+  height: 25px;
+  -webkit-appearance: none;
+  background: #323d4d;
+  outline: none;
+  border-radius: 20px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  transition: 500ms;
 }
 
-.checkbox-AddChannel > label {
-  color: lightgray;
-  font-size: 20px;
+input:checked[type='checkbox'] {
+  background-color: #03a9f4;
 }
 
-.label {
-  background-color: #111;
-  display: flex;
-  height: 22px;
-  width: 50px;
-  border-radius: 50px;
-}
-
-.checkbox {
-  opacity: 0;
-}
-
-.checkbox-AddChannel:checked .label {
-  background-color: blue;
-}
-
-.ball {
-  width: 22px;
-  height: 22px;
-  border-radius: 50%;
-  background-color: #fff;
+input[type='checkbox']::before {
+  content: '';
   position: absolute;
+  width: 25px;
+  height: 25px;
+  border-radius: 20px;
+  background-color: #fff;
+  transform: scale(1.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: 500ms;
+}
+
+input:checked[type='checkbox']::before {
+  left: 35px;
 }
