--- a/src/styles/kofta/QuestionSender.css
+++ b/src/styles/kofta/QuestionSender.css
@@ -28,28 +28,24 @@
   height: 50px;
 }
 
-.asker__top > form {
+.asker__top > .form {
   margin-top: 7px;
   width: 40px;
   height: 40px;
 }
 
-.asker__top > form {
+.asker__top > .form {
   flex: 1;
   display: flex;
 }
 
-.asker__top > form > input {
+.asker__top > .form > input {
   outline-width: 0;
   border: 1px solid #595959;
   padding: 5px 20px;
   margin: 0 10px;
   border-radius: 20px;
   background-color: #20212400;
-}
-
-.asker__top > form > button {
-  display: none;
 }
 
 .asker__input {
