--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap'); */
 
+/* Grobal variables */
+
+:root {
+  --primary-color: #0d1117;
+  --primary-text-color: #be7272;
+  --secondary-bg-color: #161b22;
+  --primary-border-color: #30363d;
+  --paper-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
 * {
   font-family: Calibri;
 }
@@ -17,7 +27,7 @@ a {
 }
 
 body {
-  background-color: #0d1117;
+  background-color: var(--primary-color);
 }
 
 ::-webkit-scrollbar {
@@ -29,9 +39,9 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #161b22;
+  background-color: var(--secondary-bg-color);
   border-radius: 20px;
-  border: 1px solid #30363d;
+  border: 1px solid var(--primary-border-color);
 }
 
 .viewteam_layout {
@@ -48,7 +58,7 @@ body {
   grid-row: 1;
 
   text-align: center;
-  border-bottom: 1px solid #30363d;
+  border-bottom: 1px solid var(--primary-border-color);
 }
 
 .titlebar__header > h2 {
