--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,6 +4,7 @@
   position: sticky;
   z-index: 100;
   background-color: #161b22;
+  box-shadow: var(--paper-shadow);
   border-radius: 11px;
   width: 100%;
   height: 60px;
