--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
   --paper-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
+.MuiTab-wrapper {
+  color: #d3d3d3;
+  font-size: 16px;
+}
+
 * {
   font-family: Calibri;
 }
