--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --secondary-bg-color: #161b22;
   --primary-border-color: #30363d;
   --paper-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  --secondary-paper-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
 }
 
 .MuiTab-wrapper {
