--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,9 +1,9 @@
 .homepage_layout {
   display: grid;
   grid-template-areas:
-    'topbar topbar ads'
-    'main main ads'
-    'main main ads';
+    "topbar topbar ads"
+    "main main ads"
+    "main main ads";
   overflow: hidden;
 }
 
@@ -146,6 +146,10 @@
   font-size: 20px;
 }
 
+.issue-card-content > p {
+  width: 300px;
+}
+
 /* Sponsor Card */
 
 .sponsored {
@@ -234,12 +238,21 @@
   padding-bottom: 7px;
 }
 
-.description__input > input {
+.no-issues {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  color: #d3d3d3;
+  font-style: italic;
+}
+
+.description__input > textarea {
   background-color: transparent;
   width: 100%;
   height: 60px;
   border: 1px solid var(--primary-border-color);
-  border-radius: 11px;
+  border-radius: 5px;
   outline: none;
   color: #323d4d;
   font-size: 16px;
@@ -292,6 +305,41 @@
   margin-bottom: 10px;
 }
 
+.selectedCategory {
+  margin-left: 10px;
+  color: #f50057;
+}
+
+/* React select styles  */
+.css-yk16xz-control {
+  background-color: transparent !important;
+  border: 1px solid var(--primary-border-color) !important;
+  color: #323d4d !important;
+}
+
+.css-1pahdxg-control {
+  background-color: transparent !important;
+}
+
+.css-1pahdxg-control:hover {
+  outline: none !important;
+  border-color: var(--primary-border-color) !important;
+}
+
+.css-1uccc91-singleValue {
+  color: #323d4d !important;
+  font-size: 20px !important;
+}
+
+.css-1wa3eu0-placeholder {
+  color: #323d4d !important;
+  font-size: 18px !important;
+}
+
+.css-2613qy-menu {
+  background: var(--primary-bg-color) !important;
+}
+
 /* Media Queries */
 
 @media (max-width: 1260px) {
@@ -306,9 +354,9 @@
   .homepage_layout {
     display: grid;
     grid-template-areas:
-      'topbar topbar topbar'
-      'main main main'
-      'main main main';
+      "topbar topbar topbar"
+      "main main main"
+      "main main main";
     overflow: hidden;
   }
 
