--- a/src/styles/kousa/SendMessage.css
+++ b/src/styles/kousa/SendMessage.css
@@ -1,5 +1,6 @@
 .send_message_wrapper {
   grid-column: 3;
+  grid-row: -2;
   padding: 20px;
   display: grid;
   grid-template-columns: 50px auto;
