--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,19 @@ body {
   width: 99vw;
   position: fixed;
   grid-template-columns: 90px 200px 1fr;
-  grid-template-rows: 50px 1fr 100px;
+  grid-template-rows: auto 1fr auto;
+}
+
+.titlebar__header {
+  grid-column: 3;
+  grid-row: 1;
+
+  text-align: center;
+  border-bottom: 1px solid #30363d;
+}
+
+.titlebar__header > h2 {
+  color: #b2bdcd;
 }
 
 textarea {
