--- a/src/styles/kallen/Discussions.css
+++ b/src/styles/kallen/Discussions.css
@@ -33,7 +33,7 @@
 .discussion-card {
   background-color: var(--secondary-bg-color);
   padding: 10px 20px;
-  width: 50%;
+  width: 60%;
   border-radius: 5px;
   box-shadow: var(--secondary-paper-shadow);
   margin-top: 20px;
@@ -106,8 +106,8 @@
 .discussion-card-status > .discussed-people {
   background-color: transparent;
   border: 1px solid var(--primary-border-color);
-  padding-left: 6px;
-  padding-right: 6px;
+  padding-left: 10px;
+  padding-right: 10px;
   border-radius: 999px;
   color: #d3d3d394;
 }
@@ -128,6 +128,10 @@
 
 .discussion-card-content > .MuiAvatar-root {
   margin-top: 10px;
+  width: 45px;
+  height: 45px;
+  border: 3px solid #f50057;
+  background-color: transparent;
 }
 
 .discussion-card-content > * {
@@ -148,11 +152,64 @@
   font-size: 18px;
 }
 
+.cardReplies-header {
+  display: flex;
+}
+
+.cardReplies-header > * {
+  margin-right: 5px;
+}
+
+.cardReplies-header > h3 {
+  color: #d3d3d3;
+}
+
+.MuiTimelineItem-missingOppositeContent:before {
+  flex: 0 !important;
+  content: none !important;
+  padding: 0px !important;
+}
+
+.reply__input {
+  height: 27px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  width: 53vw;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  border: 1px solid var(--primary-color);
+  background-color: transparent;
+}
+
+.reply__input > input {
+  border: none;
+  color: #323d4d;
+  width: 500px;
+  font-size: 16px;
+  background-color: transparent;
+}
+
+.reply-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.MuiTimelineDot-root > .MuiAvatar-root {
+  background: linear-gradient(
+    90deg,
+    rgba(245, 0, 87, 1) 53%,
+    rgba(0, 212, 255, 1) 100%
+  );
+}
+
 /* Media Quaries */
 
 @media (max-width: 1000px) {
   .discussion-card {
     width: 90%;
     padding-right: 20px;
+  }
+  .reply__input {
+    width: 75vw;
   }
 }
