--- a/src/styles/kallen/Insights.css
+++ b/src/styles/kallen/Insights.css
@@ -16,6 +16,7 @@
 }
 
 .top-card-insights-left > h3 {
+  text-transform: capitalize;
   color: #d3d3d3;
 }
 
@@ -98,6 +99,13 @@
 
 .stats-panel-insights {
   padding: 10px 20px;
+}
+
+.top-card-insights > .MuiAvatar-root {
+  width: 50px;
+  height: 50px;
+  border: 3px solid #f50057;
+  background-color: transparent;
 }
 
 @media (max-width: 1115px) {
