--- a/src/styles/kousa/MessageContainer.css
+++ b/src/styles/kousa/MessageContainer.css
@@ -13,7 +13,7 @@
 }
 
 p {
-  color: #5d7290;
+  color: #b2bdcd;
 }
 
 div {
@@ -45,12 +45,14 @@ div {
 .message__info > h4 {
   color: white;
   font-size: 20px;
+  text-transform: capitalize;
 }
 
-.message > .MuiAvatar-colorDefault {
-  color: #5d7290 !important;
-  font-size: 30px !important;
-  background-color: transparent !important;
+.message > .MuiAvatar-root {
+  width: 50px;
+  height: 50px;
+  border: 3px solid #f50057;
+  background-color: transparent;
 }
 
 .card-message {
