--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -17,14 +17,10 @@
   display: flex;
 }
 
-.logo__header > img {
-  width: 56px;
-  height: 50px;
-  margin: 5px;
-}
 .logo__header > h3 {
+  margin-left: 20px;
   margin-top: 8px;
-  color: #f50057;
+  color: #d3d3d3;
   font-size: 30px;
 }
 
