--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -57,7 +57,11 @@
   margin-bottom: 15px;
   border: 1px solid var(--border-color);
   margin-top: 100px;
-  background: linear-gradient(253.65deg, var(--bg-color) 2.65%, rgba(66, 66, 66, 0) 99.37%);
+  background: linear-gradient(
+    253.65deg,
+    var(--bg-color) 2.65%,
+    rgba(66, 66, 66, 0) 99.37%
+  );
 }
 
 .list {
@@ -127,7 +131,10 @@
   height: 40px;
   width: 100px;
   color: lightgray;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
   cursor: pointer;
   padding: 10px 20px;
   border-radius: 11px;
@@ -140,8 +147,11 @@
 
 /* Footer */
 .footer__banner {
-  display: grid;
-  grid-template-columns: 40px 40px 40px 150px 1fr;
+  display: flex;
+}
+
+.footer__banner > * {
+  margin: 7px;
 }
 
 .footer__banner > a {
@@ -149,8 +159,7 @@
 }
 
 .footer__banner > a > h4 {
-  margin-top: 3px;
-  color: lightgray;
+  color: #f50057;
 }
 
 /* Media Queries */
