--- a/src/styles/kousa/SendMessage.css
+++ b/src/styles/kousa/SendMessage.css
@@ -45,3 +45,15 @@
   margin-top: 3px !important;
   padding: 2px;
 }
+
+@media (max-width: 850px) {
+  .message__input {
+    width: 50vw;
+  }
+}
+
+@media (max-width: 750px) {
+  .message__input {
+    width: 80vw;
+  }
+}
